# tree-sitter-c3

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  build_library.sh  build_playground.sh  build_shared_library.sh  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  regenerate.yml  release.yml  test.yml
bindings/c/: tree-sitter-c3.pc.in
bindings/c/tree_sitter/: tree-sitter-c3.h
bindings/c3/tree_sitter_c3.c3l/: manifest.json  tree_sitter_c3.c3i
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_c3/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterC3Tests/: TreeSitterC3Tests.swift
docs/: index.html  tree-sitter-parser.wasm  web-tree-sitter.wasm
docs/playground/: tree-sitter-c3.wasm  tree-sitter.wasm
playground/: tree-sitter-c3.wasm  tree-sitter.wasm
queries/: brackets.scm  folds.scm  highlights.scm  indents.scm  textobjects.scm
scripts/: check-stdlib-grammar.mjs
src/: grammar.json  node-types.json  scanner.c
test/corpus/: comments.txt  declaration.txt  expression.txt  statement.txt  types.txt
test_runner/: project.json
test_runner/src/: main.c3
