[package]
name = "tree-sitter-c3"
description = "C3 grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "c3"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/cbuttner/tree-sitter-c3"
edition = "2023"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.17"

[build-dependencies]
cc = "1.0"
