[package]
name = "tree-sitter-c3"
description = "C3 grammar for tree-sitter"
version = "0.8.2"
authors = ["Christian Buttner"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "c3"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/c3lang/tree-sitter-c3"
edition = "2024"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
